[package]
name = "motor_fix_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# Para el manejo de logs (Tarea1)
log = "0.4"
env_logger = "0.10"

# Para leer archivos .env
dotenv = "0.15.0"

# lo que usaremos en las siguientes tareas de la Fase 1
tokio = { version = "1.0", features = ["full"]}
fefix = { version = "0.7", features = ["full"]}
chrono = "0.4"


# --- FASE 3: MACHINE LEARNING & MATH ---
# Estructuras de datos para álgebra lineal
ndarray = "0.16.0"
# Traits para cálculos numéricos genéricos
num-traits = "0.2.19"
# Ventanas rodantes y estadísticas (opcional pero muy útil)
ringbuffer = "0.15.0"
