[package]
name = "motor_fix_rust"
version = "0.1.0"
edition = "2021" # Nota: He ajustado a 2021 que es la estable más común, o mantén 2024 si usas el canal nightly.

[dependencies]
# --- INFRAESTRUCTURA ---
log = "0.4"
env_logger = "0.10"
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"]}
fefix = { version = "0.7", features = ["full"]}
chrono = "0.4"

# --- FASE 3: MACHINE LEARNING & MATH ---
# Estructuras de datos para álgebra lineal
ndarray = "0.16.0"

# Extensión para generar matrices aleatorias (Vital para BayesianBrain)
# Usamos versiones que se hablan correctamente entre sí
ndarray-rand = "0.15.0" 
rand_distr = "0.4.3"
rand = "0.8.5"

# Traits para cálculos numéricos genéricos
num-traits = "0.2.19"

# Ventanas rodantes y estadísticas
ringbuffer = "0.15.0"
